unpackaged/main/default/objects/Pricing_Detail__c/Pricing_Detail__c.object-meta.xml
<CustomObject>
    <label>Pricing Detail</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pricing Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>