unpackaged/main/default/objects/Pricing_Detail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Service_Agreement__r.Vendor__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>