unpackaged/main/default/objects/Pricing_Detail__c/fields/Advance_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Advance_Agreement__c</fullName>
    <label>Advance Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>