unpackaged/main/default/objects/Pricing_Detail__c/fields/Alchemy_Commissions_Product__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_Commissions_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alchemy/Commissions Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Pricing Details</relationshipLabel>
    <relationshipName>Pricing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>