unpackaged/main/default/objects/Pricing_Detail__c/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <label>Base Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>