unpackaged/main/default/objects/Pricing_Detail__c/fields/Incentive_Throughput_Measurement_Units__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Throughput_Measurement_Units__c</fullName>
    <label>Incentive Throughput Measurement Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>kW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>