unpackaged/main/default/objects/Pricing_Detail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing Details</relationshipLabel>
    <relationshipName>Pricing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>