unpackaged/main/default/objects/Pricing_Detail__c/fields/Pricing_Structure_Units__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Structure_Units__c</fullName>
    <label>Pricing Structure Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$/Panel</fullName>
            </value>
            <value>
                <fullName>$/watt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>