unpackaged/main/default/objects/Pricing_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Details</relationshipLabel>
    <relationshipName>Pricing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>