unpackaged/main/default/objects/Pricing_Detail__c/fields/Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement__c</fullName>
    <label>Service Agreement</label>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Pricing Details</relationshipLabel>
    <relationshipName>Pricing_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>