unpackaged/main/default/objects/Pricing_Detail__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>TEXT(Service_Agreement__r.State__c)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>