unpackaged/main/default/objects/Pricing_Detail__c/fields/Throughput_Incentive_Structure__c.field-meta.xml
<CustomField>
    <fullName>Throughput_Incentive_Structure__c</fullName>
    <label>Throughput Incentive Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>