unpackaged/main/default/objects/Pricing_Detail__c/fields/Throughput_Target_Pricing_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Throughput_Target_Pricing_Tier_2__c</fullName>
    <label>Throughput Target Pricing - Tier 2</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>