unpackaged/main/default/objects/Pricing_Detail__c/fields/Throughput_Target_Tier_1__c.field-meta.xml
<CustomField>
    <fullName>Throughput_Target_Tier_1__c</fullName>
    <label>Throughput Target - Tier 1</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>